--- a/src/components/projecteditor/style.less
+++ b/src/components/projecteditor/style.less
@@ -90,7 +90,7 @@
         }
     }
 
-    .bottomBarContainer {
+    .bottomButtonsContainer {
         background-color: #1C2022;
         border-top: 1px solid #121516;
         height: 35px;
@@ -99,6 +99,9 @@
         .sideButton {
             border-bottom: 2px solid;
             border-color: transparent;
+            height: 100%;
+            padding: 0px 10px;
+            margin-left: 35px;
             &:hover {
                 border-color: @primary-color;
             }
